--- a/final/css/style.css
+++ b/final/css/style.css
@@ -12,3 +12,41 @@
 	height: 60px;
 	padding: 5px 0px;
 }
+
+
+/* Dual range slider
+/* from https://stackoverflow.com/questions/4753946/html5-slider-with-two-inputs-possible  */
+section.range-slider {
+    position: relative;
+    width: 800px;
+    height: 35px;
+    text-align: center;
+}
+
+section.range-slider input {
+    pointer-events: none;
+    position: absolute;
+    overflow: hidden;
+    left: 0;
+    top: 15px;
+    width: 800px;
+    outline: none;
+    height: 18px;
+    margin: 0;
+    padding: 0;
+}
+
+section.range-slider input::-webkit-slider-thumb {
+    pointer-events: all;
+    position: relative;
+    z-index: 1;
+    outline: 0;
+}
+
+section.range-slider input::-moz-range-thumb {
+    pointer-events: all;
+    position: relative;
+    z-index: 10;
+    -moz-appearance: none;
+    width: 9px;
+}
